Fixing issue where the first cell had text that too large

--- a/src/appserver/static/lookup_edit.css
+++ b/src/appserver/static/lookup_edit.css
@@ -13,10 +13,6 @@
 	padding: 0px !important;
 }
 
-td:nth-of-type(1){
-	font-size: 14px;
-}
-
 td:first-child{
 	width: 16px;
 }
